@@ -159,11 +159,12 @@ public class RedisAtomicLong extends Number implements Serializable, BoundKeyOpe
 	public long get() {
 
 		Long value = operations.get(key);
+
 		if (value != null) {
 			return value;
 		}
 
-		throw new DataRetrievalFailureException(String.format("The key '%s' seems to no longer exist", key));
+		throw new DataRetrievalFailureException("The key '%s' seems to no longer exist".formatted(key));
 	}
 
 	/**
